<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_bridge</name>
  <version>2.0.0</version>
  <description>CyberDog Bridge Node V2 - HTTP to ROS2指令桥接器</description>
  <maintainer email="ken@example.com">Ken</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>motion_msgs</depend>
  <depend>interaction_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
